# test-vulkan

./: .gitignore  CMakeLists.txt  README.md  clear.c  frag.glsl.frag  init.c  spv.h  spv_andk.c  spv_stdio.c  test_x11basic.c  triangle.c  vert.glsl  vkapp.c  vkapp.h  window.h  window_win32.c  window_x11.c
apk/: settings.gradle
apk/app/: build.gradle
apk/app/src/androidTest/java/com/denzygames/testvk/: ExampleInstrumentedTest.kt
apk/app/src/main/assets/: frag.spv  vert.spv
apk/app/src/main/code/: CMakeLists.txt  main.c  spv_andk.c  teskvk_android.h  window_andk.c
apk/app/src/main/res/values/: strings.xml
apk/app/src/test/java/com/denzygames/testvk/: ExampleUnitTest.kt
